--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -1,108 +1,726 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+html{
+  scroll-behavior: smooth;
+}
+.footer {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+p, nav, table > tbody, .btn, .contact {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+h1, h2, h3, h4, table > thead {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.container {
+  width: 760px;
+  border: 1px;
+  margin: 0 auto;
+}
+.bannerwrapper {
+  background:url('../images/main-banner.jpg') center center no-repeat;
+  background-size: cover;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+}
+.blackback {
+  padding-bottom: 1rem;
+  background-color: #22222294;
+}
+h1, .header {
+  color: white;
+  margin-left: 20px;
+}
+h1 {
+  font-size: 80px;
+}
+.header {
+  font-size: 20px;
+}
+.btn-yellow {
+  background-color: #c78c06;
+  color: #222;
+  border: 0;
+  padding: 2em;
+  margin-top: -0.5rem;
+  font-size: 15px;
+  margin-left: 20px;
+}
+.btn-yellow:hover {
+  background-color: #ffe6ac;
+  color: #222;
+  border: 0;
+  padding: 2em;
+  margin-top: -0.5rem;
+  font-size: 15px;
+  margin-left: 20px;
+}
+.btn-yellow a {
+  text-decoration-line: none;
+  color: #222;
+}
+.btn-blue a {
+  text-decoration-line: none;
+  color: white;
+}
+.btn-black a {
+  text-decoration-line: none;
+  color: white;
+}
+.fa-play {
+  padding-left: 1rem;
+}
+.menu {
+  display: block;
+  text-align: center;
+  color: #c78c06;
+  background-color: #222;
+  padding: 1rem;
+  width: auto;
+}
+.menu a:hover {
+  background-color: #c78c06;
+  color: #222;
+  height: 8rem;
+  align-content: end;
+  padding-bottom: 1rem;
+} 
+.menu ul {
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+.menu ul li {
+  list-style: none;
+  width: 100%;
+  padding: 0%;
+}
+.menu ul a {
+  display: block; /* This element is for use width completely I need in the content. */
+  text-decoration: none;
+  color: #c78c06;
+  width: auto;
+  height: 3rem;
+  text-align: center;
+}
+.searchwrapper {
+  display: flex;
+}
+.searchbar {
+  flex: 1;
+}
+.btn-search {
+  color: #c78c06;
+  background-color: #222;
+  border: 2px solid #c78c06;
+  padding: 0.3rem;
+}
+.btn-search:hover {
+  color: #222;
+  background-color: #ffe6ac;
+  border: 2px solid #c78c06;
+  padding: 0.3rem;
+}
+.btn-search a{
+  text-decoration-line: none;
+  color: #c78c06;
+}
+.logo {
+  display: flex;
+  position: absolute;
+}
+h2 {
+  font-size: 40px;
+}
+.aboutussec {
+  display: grid;
+  background-color: #ffe6ac;
+  padding: 1rem 1rem;
+  /* margin-top: 700px; */
+}
+.aboutimg {
+  width: 100%;
+  height: max-content;
+  /* padding: 0;
+  margin: 0 auto; */
+}
+.serwrapper {
+  margin: 20px;
+}
+.servicessec {
+  background-color: #ffe6ac;
+  /* grid-area: ser1; */
+  margin-bottom: 1rem;
+}
+.digital {
+  width: 100%;
+}
+.dt {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.marketing {
+  background-color: #ffe6ac;
+  /* grid-area: ser2; */
+  margin-bottom: 1rem;
+}
+.mkt {
+  width: 100%;
+}
+.mktwrapper {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.video-production {
+  background-color: #ffe6ac;
+  /* grid-area: ser3; */
+  margin-bottom: 1rem;
+}
+.vipro {
+  width: 100%;
+}
+.prod {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.web-development {
+  background-color: #ffe6ac;
+  /* grid-area: ser4; */
+  margin-bottom: 1rem;
+}
+.web {
+  width: 100%;
+}
+.webdev {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.print {
+  background-color: #ffe6ac;
+  /* grid-area: ser5; */
+  margin-bottom: 1rem;
+}
+.pr {
+  width: 100%;
+}
+.prsec {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+/* .ourserviceswrapper {
+  display: grid;
+  grid-template-areas: 
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser3 ser3 ser4 ser4 ser5 ser5"
+  "ser3 ser3 ser4 ser4 ser5 ser5";
+} */
+.btn-black {
+  color: white;
+  border: 0;
+  background-color: #222;
+  padding: 2em;
+  margin-top: 1em;
+  margin-bottom: 1rem;
+}
+.btn-black:hover {
+  color: #222;
+  border: 0;
+  background-color: #c78c06;
+  padding: 2em;
+  margin-top: 1em;
+  margin-bottom: 1rem;
+}
+.our-vision{
+  background:url('../images/vision.jpg') center center no-repeat;
+  background-size:cover;
+  color:white;
+  padding: 50px 100px;
+  margin-left:-100px;
+  margin-right:-30px;
+}
+.our-vision .title{
+  font-size:50px;
+  margin: 1rem;
+}
+.desc {
+  margin: 1rem;
+}
+.btn-blue {
+  background-color: #1e3558;
+  padding: 2rem;
+  color: white;
+  border: 2px solid #c78c06;
+  margin: 1rem;
+}
+.btn-blue:hover {
+  background-color: white;
+  padding: 2rem;
+  color: #1e3558;
+  border: 2px solid #c78c06;
+  margin: 1rem;
+}
+.our-team {
+  margin: 20px;
+}
+.our-team, h2 {
+  margin: 20px;
+}
+.jwrapper, .bwrapper {
+  background-color: #ffe6ac;
+  padding-bottom: 1rem;
+  margin: 20px;
+}
+.jpic {
+  width: 100%;
+}
+.john {
+  /* margin-left: 1rem;
+  margin-right: 1rem; */
+  margin: 1rem;
+}
+h3 {
+  font-size: 30px;
+  margin: 0;
+}
+h4 {
+  margin: 0;
+  font-size: 15px;
+  border-bottom: 2px solid #c78c06;
+}
+.bpic {
+  width: 100%;
+}
+.bob {
+  margin: 1rem;
+}
+.contact-us {
+  padding: 20px;
+  margin: 10px;
+  border: 1px;
+}
+.contact-us form {
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.contact-us label {
+  margin-bottom: 5px;
+  font-weight: 400;
+}
+.contact-us input[type="text"],
+.contact-us input[type="email"],
+.contact-us textarea {
+  padding: 10px;
+  border: 1px solid #222;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.contact-us textarea {
+  height: 100px;
+}
+.contact-us button[type="submit"] {
+  display: flex;
+  background-color: #222;
+  color: #c78c06;
+  padding: 0.5rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 18px;
+}
+.contact-us button[type="submit"]:hover {
+  background-color: #c78c06;
+  color: #222;
+}
+.tablewrapper {
+  margin: 20px;
+}
+.table {
+  border: 1px solid #222; /* Add a thin border to the table */
+}
+table {
+  width: 100%; /* Make the table occupy full width */
+}
+th,
+td {
+  padding: 1rem; /* Add padding to table cells */
+  text-align: left; /* Align the content to the left */
+}
+thead {
+  background-color: #ffe6ac; /* Set the header background color to yellow */
+}
+th {
+  text-align: center;
+}
+.location { /* setting for map */
+  margin: 20px;
+}
+iframe { /* setting for map */
+  width: 100%;
+  height: 300px;
+  border: 0;
+}
+.location h3 {
+  padding-top: 1rem;
+}
+.footer { /* Setting to adjust "footer" section */
+  background-color: #222;
+  width: 100%;
+  color: #c78c06;
+  padding: 1rem;
+}
+.footer a {
+  color: #c78c06;
+}
+.unsplash {
+  color: #c78c06;
+}
+@media screen and (min-width:760px) { /* media query to adjust to screen size max 1200px */
+  .container{
+    width: 1200px;
+    margin: 0 auto;
   }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
-  html{
-    scroll-behavior: smooth;
-  }
-  .footer {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  p, nav, table > tbody, .btn, .contact {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  h1, h2, h3, h4, table > thead {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-  }
-  .container {
-    max-width: 1200px;
-  }
-  .img-banner {
-    width: auto;
-    height: auto;
-    display: block;
-    }
-  h1 {
-    position: absolute; /* This is one of the value to change the position. */
-    top: 50%;
-    width: 100%;
-    font-size: 50px;
-    text-align: left;
-    color: white;
-  }
-  .btn-yellow {
-    position: absolute;
-    top: 94%;
-    color: #222;
-    border: 0;
-    background-color: #c78c06;
-    padding: 2em;
-    margin-top: 1em;
-  }
-  .fa-play {
-    padding-left: 1rem;
-  }
-  .header {
-    position: absolute;
-    top:75%;
-    width: 100%;
-    font-size: 18px;
-    text-align: left;
-    color: white;
-  }
-  @media screen and (min-width: 760px) { /* This property is for style inside specific screen sizes. This will activate depending on the differents settings I set. */
-  .container {
-    max-width: 760px;
+  .menuwrapper {
+    display: flex;
   }
   .menu {
-    display: block;
+    width: 1200px;
+    flex-direction: column-reverse;
+    justify-content: space-evenly;
+  }
+  .about-us {
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-evenly;
+  }
+  .services {
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-evenly;
+  }
+  .team {
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-evenly;
+  }
+  .contact {
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-evenly;
+  }
+  .aboutussec {
+    display: flex;
+  }
+  .aboutwrapper {
+    flex-direction: row;
+    height: fit-content;
+    margin-left: 1rem;
+    align-items: center;
+  }
+  .aboutimg {
+    width: 50%;
+    height: fit-content;
+  }
+  .serwrapper { /* Setting to adjust "Our Services" section */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .ourservices:nth-child(1) { /* Setting to adjust "Our Services" section */
+    background-color: #ffe6ac;
+    grid-area: ser1;
+    /* margin-bottom: 1rem; */
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .ourservices:nth-child(2) { /* Setting to adjust "Our Services" section */
+    background-color: #ffe6ac;
+    grid-area: ser2;
+    /* margin-bottom: 1rem; */
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .ourservices:nth-child(3) { /* Setting to adjust "Our Services" section */
+    background-color: #ffe6ac;
+    grid-area: ser3;
+    /* margin-bottom: 1rem; */
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .ourservices:nth-child(4) { /* Setting to adjust "Our Services" section */
+    background-color: #ffe6ac;
+    grid-area: ser4;
+    /* margin-bottom: 1rem; */
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .ourservices:nth-child(5) { /* Setting to adjust "Our Services" section */
+    background-color: #ffe6ac;
+    grid-area: ser5;
+    /* margin-bottom: 1rem; */
+    gap: 1rem;
+    padding: 1rem;
+  }
+  /* .ourservices {
+    /* display: grid; */
+    /* grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 1rem;
+    padding: 0;
+  } */
+  .serwrapper { /* Setting to adjust "Our Services" section */
+    grid-template-areas: 
+    "ser1 ser1 ser1 ser2 ser2 ser2"
+    "ser1 ser1 ser1 ser2 ser2 ser2"
+    "ser1 ser1 ser1 ser2 ser2 ser2"
+    "ser3 ser3 ser4 ser4 ser5 ser5"
+    "ser3 ser3 ser4 ser4 ser5 ser5"
+    "ser3 ser3 ser4 ser4 ser5 ser5";
+  }
+  .our-vision { /* Setting to adjust to big screen */
+    width: 1200px;
+    height: min-content;
+  }
+  .jwrapper { /* Setting to adjust "our team" section */
+    display: flex;
+    flex-direction: row;
+  }
+  .john { /* Setting to adjust "our team" section */
+   width: 50%;
+   height: max-content;
+   text-align: left;
+  }
+  .bwrapper { /* Setting to adjust "our team" section */
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .bob { /* Setting to adjust "our team" section */
+    width: 50%;
+    height: max-content;
+    text-align: left;
+   }
+  /* .contact-us {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+   } */
+  .desk { /* Setting to adjust "contact us", "Map" and "table" section */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+   }
+  .contact-us { /* Setting to adjust "contact us", "Map" and "table" section */
+    grid-area: f1;
+   }
+   .tbl { /* Setting to adjust "contact us", "Map" and "table" section */
+    grid-area: t1;
+   }
+  .location { /* Setting to adjust "contact us", "Map" and "table" section */
+    grid-area: m1;
+   }
+  .desk { /* Setting to adjust "contact us", "Map" and "table" section */
+    grid-template-areas: 
+    "f1 f1 f1 m1 m1 m1"
+    "f1 f1 f1 m1 m1 m1"
+    "f1 f1 f1 m1 m1 m1"
+    "t1 t1 t1 t1 t1 t1"
+    "t1 t1 t1 t1 t1 t1"
+    "t1 t1 t1 t1 t1 t1";
+   }
+}
+/* .banner {
+  background-position: relative;
+  background-size: cover;
+  color:white;
+  padding:450px 150px;
+  /* margin-left:30px; */
+  /* margin-right:200px; 
+  }
+  .blackback {
+    background-color: #2222226d;
+    background-size: contain;
+  }
+  /* .banner {
+    position: absolute;
+    background-color: #222;
+  }
+h1 {
+  position: relative; /* This is one of the value to change the position. */
+  /* top: 50%; 
+  width: 100%;
+  font-size: 50px;
+  text-align: left;
+  color: white;
+}
+.btn-yellow {
+  position: relative;
+  /* top: 94%;
+  color: #222;
+  border: 0;
+  background-color: #c78c06;
+  padding: 2em;
+  margin-top: 1em;
+}
+.fa-play {
+  padding-left: 1rem;
+}
+.header {
+  position: relative;
+  /* top:75%;
+  width: 100%;
+  font-size: 18px;
+  text-align: left;
+  color: white;
+}
+.menu {
+  display: block;
+  align-items: inherit;
+  text-align: center;
+  color: #c78c06;
+  background-color: #222;
+  padding: 1rem;
+  width: 1200px;
+}
+.menu a:hover {
+  background-color: #c78c06;
+  color: #222;
+  /* height: 8rem; */
+  /* align-content: end; */
+  /* padding-bottom: 1rem;
+}  
+.menu ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  padding: 0;
+}
+.menu ul li {
+  list-style: none;
+  width: 100%;
+  /* padding: 0%; 
+}
+.menu ul a {
+  display: block; /* This element is for use width completely I need in the content.
+  text-decoration: none;
+  color: #c78c06;
+  /* width: auto;
+  height: 3rem;
+  text-align: center;
+}
+.logo {
+  display: flex;
+  /* align-content: start;
+  position: absolute;
+  height: 50px;
+  align-items: center;
+}
+.search {
+  display: flex;
+  /* position: absolute;
+  right: -30%;
+  bottom: -55%;
+}
+.btn-search {
+  background-color: #222;
+  color: #c78c06;
+  border: 1px solid #c78c06;
+  height: 30px;
+  width: 30px;
+}
+.about-us {
+  background-color: #ffe6ac;
+  padding: 1rem 3rem;
+  display: flex;
+}
+.aboutimg {
+  width: 600px;
+  padding: 1rem;
+}
+.services {
+  background-color: #ffe6ac;
+  grid-area: ser1;
+}
+.marketing {
+  background-color: #ffe6ac;
+  grid-area: ser2;
+}
+.video-production {
+  background-color: #ffe6ac;
+  grid-area: ser3;
+}
+.web-development {
+  background-color: #ffe6ac;
+  grid-area: ser4;
+}
+.print {
+  background-color: #ffe6ac;
+  grid-area: ser5;
+}
+.ourserviceswrapper {
+  display: grid;
+  grid-template-areas: 
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser1 ser1 ser1 ser2 ser2 ser2"
+  "ser3 ser3 ser4 ser4 ser5 ser5"
+  "ser3 ser3 ser4 ser4 ser5 ser5";
+}
+.btn-black {
+  color: white;
+  border: 0;
+  background-color: #222;
+  padding: 2em;
+  margin-top: 1em;
+}
+.ourvision {
+  display: block;
+}
+
+.btn-blue {
+  background-color: #1e3558;
+  padding: 2rem;
+  color: white;
+  border: 2px solid #c78c06;
+}
+.john {
+  grid-area: ;
+}
+.our-vision{
+  background:url('../images/vision.jpg') center center no-repeat;
+  background-size:cover;
+  color:white;
+  padding:50px 100px;
+  margin-left:-100px;
+  margin-right:-100px;
+}
+.our-vision .title{
+  font-size:50px;
+  margin:0;
+}
+ @media screen and (min-width: 760px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .menu {
     color: #c78c06;
     background-color: #222;
     padding: 1rem 1rem;
     text-align: center;
-    max-width: auto;
+    width: 0 auto;
   }
-  
-  .menu a:hover {
-    background-color: #c78c06;
-    color: #222;
-    height: 8rem;
-    align-content: end;
-    padding-bottom: 1rem;
-  }  
-  .menu ul {
-    margin: 0 auto;
-    padding: 0;
-    max-width: auto;
-  }
-  .menu ul li {
-    list-style: none;
-    width: 100%;
-    padding: 0%;
-  }
-  .menu ul a {
-    display: block; /* This element is for use width completely I need in the content. */
-    text-decoration: none;
-    color: #c78c06;
-    width: auto;
-    height: 3rem;
-  }
-  .logo {
-    display: flex;
-    align-content: start;
-    position: absolute;
-  }
-  .search {
-    width: 100%;
-  }
-}
+} */
